[FEAT] Marketplace Detail View (Mobile)

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -2355,9 +2355,9 @@
   "marketplace.from": "From",
   "marketplace.sfl": "SFL",
   "marketplace.quantity": "Quantity",
+  "marketplace.qty": "Qty",
   "marketplace.lastSold": "Last sold: {{sfl}} SFL",
   "marketplace.noSales": "There have been no recent sales.",
-  "marketplace.priceHistory": "Sale history",
   "marketplace.confirmDetails": "Please confirm the following details.",
   "marketplace.howMuch": "How much SFL would you like to offer?",
   "marketplace.sflLocked": "SFL secured",
@@ -3552,6 +3552,8 @@
   "easterEgg.digbysDiary": "Digby's Diary",
   "easterEgg.goldtoothsDiary": "Goldtooth's Diary",
   "easterEgg.pharaohsDiary": "Pharaoh's Diary",
+  "marketplace.saleHistory": "Sales History",
+  "marketplace.supply": "Supply: {{supply}}",
   "marketplace.title3": "Title",
   "marketplace.cancelOffer": "Cancel offer",
   "marketplace.yourOffer": "Your offer",
@@ -4440,8 +4442,7 @@
   "marketplace.onchainComingSoon": "On chain trading coming soon",
   "marketplace.sold": "Sold",
   "marketplace.sellerWillReceive": "Seller will receive",
-  "marketplace.salePrice": "Sale Price",
-  "marketplace.saleHistory": "Sale History",
+  "marketplace.salePrice": "Sales Price",
   "marketplace.oneDayChange": "24h Change",
   "marketplace.sevenDayChange": "7d Change",
   "marketplace.sales": "Sales",
