[FEAT] Add marketplace info to the banners

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3554,6 +3554,8 @@
   "easterEgg.digbysDiary": "Digby's Diary",
   "easterEgg.goldtoothsDiary": "Goldtooth's Diary",
   "easterEgg.pharaohsDiary": "Pharaoh's Diary",
+  "marketplace.vip.access": "Unlimited marketplace access",
+  "marketplace.vip.season.access": "Unlimited marketplace access during the season",
   "marketplace.saleHistory": "Sales History",
   "marketplace.supply": "Supply: {{supply}}",
   "marketplace.title3": "Title",
