--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -4361,7 +4361,7 @@
   "marketplace.powerUpsDescription": "使用专属物品来促进您的农场发展",
   "marketplace.cosmetics": "装饰",
   "marketplace.cosmeticsDescription": "使用稀有物品来装饰您的农场",
-  "marketplace.trending": "火爆",
+  "marketplace.trending": "热卖",
   "marketplace.totalVolume": "总交易量",
   "marketplace.totalTrades": "总交易数",
   "marketplace.walletsHoldingCollectibles": "持有收藏品的钱包数",
