--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -3555,7 +3555,7 @@
   "gems.shipment.success": "呜呼，免费补货的货船刚刚到岸，可以补货了。",
   "gems.shipment.arrived": "船已经到达",
   "description.barn": "畜棚。漂亮舒适的房子，适合你四条腿的朋友。",
-  "description.workbench": "锻造工具、建筑物和加成物品来帮助你在农场工作",
+  "description.workbench": "工作台。锻造工具、建筑物和加成物品来帮助你在农场工作",
   "faction.shop.title": "帮派商城",
   "faction.shop.membersOnly": "帮派成员专享",
   "marketplace.areYouSureYouWantToBuy": "您确定要购买这件商品吗？",
