[FEAT] Add Marketplace VIP Restrictions (#4840)
* [FEAT] Add vip controls to marketplace

* [FEAT] Add 1 daily listing and no offers

* [FEAT] Add marketplace info to the banners

* [FEAT] Update vip access color

* [FIX] Conflicts

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -1886,8 +1886,8 @@
   "refresh": "Refresh",
   "refreshing": "Refreshing",
   "remaining": "remaining",
-  "remaining.free.listings": "{{listingsRemaining}} daily listings remaining",
-  "remaining.free.listing": "1 daily listing remaining",
+  "remaining.free.listings": "{{listingsRemaining}} free daily listings",
+  "remaining.free.listing": "1 free daily listing",
   "remaining.free.purchases": "{{purchasesRemaining}} daily purchases remaining",
   "remaining.free.purchase": "1 daily purchase remaining",
   "remove": "Remove",
@@ -2322,6 +2322,8 @@
   "lostSunflorian.line1": "My father sent me here to rule over Helios.",
   "lostSunflorian.line2": "Unfortunately, these Bumpkins don't like me watching them.",
   "lostSunflorian.line3": "I can't wait to return to Sunfloria.",
+  "marketplace.unlockSelling": "Unlock selling",
+  "marketplace.unlockOffering": "Unlock offering",
   "marketplace.youOwn": "You own: {{count}}",
   "marketplace.pricePerUnit": "{{price}} per unit",
   "marketplace.areYouSureYouWantToBuy": "Are you sure you want to buy this item?",
@@ -3552,6 +3554,8 @@
   "easterEgg.digbysDiary": "Digby's Diary",
   "easterEgg.goldtoothsDiary": "Goldtooth's Diary",
   "easterEgg.pharaohsDiary": "Pharaoh's Diary",
+  "marketplace.vip.access": "Unlimited marketplace access",
+  "marketplace.vip.season.access": "Unlimited marketplace access during the season",
   "marketplace.saleHistory": "Sales History",
   "marketplace.supply": "Supply: {{supply}}",
   "marketplace.title3": "Title",
