[FIX] Marketplace drop date

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4288,7 +4288,7 @@
   "whatsOn.date.nov1": "November 1st",
   "whatsOn.date.nov4": "November 4th",
   "whatsOn.date.nov6Dec11": "November 6th - Jan 31st",
-  "whatsOn.date.dec2": "December 2nd",
+  "whatsOn.date.dec2": "December 9th",
   "whatsOn.date.dec11Dec18": "December 9th - Dec 16th",
   "whatsOn.date.dec18Jan31": "December 18th - Jan 31st",
   "whatsOn.date.feb1": "February 1st",
