--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4451,7 +4451,7 @@
   "marketplace.hoarding.description": "You must store your game progress in order to be able to purchase this listing.",
   "marketplace.welcome.one": "Howdy there, partner! Welcome to the Marketplace. Your one-stop shop for all things farm-tastic.",
   "marketplace.welcome.two": "Here you can trade resources, buy exclusive collectibles & boost your farm.",
-  "marketplace.welcome.three": "The marketplace exclusively uses $SFL, the currency of Sunflower Land. You can earn SFL in-game or trading with other players.",
+  "marketplace.welcome.three": "The marketplace exclusively uses $SFL, the currency of Sunflower Land. You can earn $SFL in-game or trading with other players.",
   "marketplace.welcome.four": "Trade resources, collectibles & wearables for your farm.",
   "marketplace.welcome.five": "Sell resources & items to earn $SFL.",
   "marketplace.welcome.six": "Earn points on trades and unlock rewards.",
