--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -2406,6 +2406,8 @@
   "marketplace.cancelListing.areYouSure": "Are you sure you want to cancel this listing?",
   "marketplace.cancelListing.selectListing": "Please select the listing you want to cancel.",
   "marketplace.resource": "Resource",
+  "marketplace.reward.seedLimit": "One of more seeds is above inventory limit",
+  "marketplace.reward.shop": "Marketplace Reward Shop",
   "megaStore.visit": "Visit the Megastore in the plaza before time runs out!",
   "megaStore.message": "Welcome to the Mega Store! Check out this month's limited items. If you like something, be sure to grab it before it vanishes into the realms of time.",
   "megaStore.month.sale": "This month's sales",
