[FEAT] Marketplace Reward Shop (#4838)
* Update TRADE_POINTS_MULTIPLIER (#4835)

* Fix tests

* Remove tests

* Hide Trade Levels

* Create Trade Rewards Object

* Add Function for tradeRewards

* Add digging pack

* Add tests

* Add Trade Cake

* Update Trade Points Coupon icon

* Add UI for trade points

* reorganise files

* Fix tests

* Reorganise files

* Add UI For each item

* Add Checkmark on redemption

* Trade Cake description

* tests

* Add all sunnyside categories into setup.ts

* Translations

* Craig's Suggestions

Co-authored-by: Craig <41215134+c-py@users.noreply.github.com>

* Add Scroll for long list of seeds

* More translations

* Simplify Condition

---------

Co-authored-by: Craig <41215134+c-py@users.noreply.github.com>

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -2405,6 +2405,14 @@
   "marketplace.cancelListing.areYouSure": "Are you sure you want to cancel this listing?",
   "marketplace.cancelListing.selectListing": "Please select the listing you want to cancel.",
   "marketplace.resource": "Resource",
+  "marketplace.reward.seedLimit": "One of more seeds is above inventory limit",
+  "marketplace.reward.shop": "Marketplace Reward Shop",
+  "marketplace.reward.contains": "Contains",
+  "marketplace.reward.toolPack.description": "A stock worth of tools",
+  "marketplace.reward.seedPack.description": "A stock worth of seeds",
+  "marketplace.reward.diggingPack.description": "A stock's worth of digging tools",
+  "marketplace.reward.fishingPack.description": "A pack of fishing utilities",
+  "marketplace.reward.animalPack.description": "A pack of animal feeds",
   "megaStore.visit": "Visit the Megastore in the plaza before time runs out!",
   "megaStore.message": "Welcome to the Mega Store! Check out this month's limited items. If you like something, be sure to grab it before it vanishes into the realms of time.",
   "megaStore.month.sale": "This month's sales",
