--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4459,7 +4459,7 @@
   "marketplace.currentPrice": "Current Price",
   "marketplace.hoarding": "Store progress required",
   "marketplace.hoarding.description": "You must store your game progress in order to be able to purchase this listing.",
-  "marketplace.whaleTrades": "Whale Trades",
+  "marketplace.whaleTrades": "Whale Traders",
   "marketplace.7days": "Last 7 Days",
   "marketplace.welcome.one": "Howdy there, partner! Welcome to the Marketplace. Your one-stop shop for all things farm-tastic.",
   "marketplace.welcome.two": "Here you can trade resources, buy exclusive collectibles & boost your farm.",
