[FEAT] Christmas 2024 Collectibles

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4330,6 +4330,12 @@
   "description.superTotem.boost": "50% Reduction to Crop, Mineral, Fruit, Cooking and Tree Time",
   "description.super.totem.expired": "Your Super Totem has expired. Head to the Pumpkin Plaza to discover and craft more magical items to boost your farming abilities!",
   "description.super.totem.temporarily": "The Super Totem temporarily boosts your cooking, crops, trees & mineral time. Make the most of it!",
+  "description.christmasStocking": "A classic festive stocking, perfect for filling with holiday treats and surprises.",
+  "description.goldenChristmasStocking": "A luxurious stocking with golden accents, adding an elegant touch to your Christmas decor.",
+  "description.cozyFireplace": "A warm and inviting fireplace that sets the perfect backdrop for holiday gatherings.",
+  "description.christmasRug": "A festive rug adorned with seasonal patterns to bring warmth and holiday spirit to your home.",
+  "description.christmasCandle": "A glowing candle with a festive scent, ideal for creating a cozy and magical atmosphere.",
+
   "npcDialogues.pumpkinPete.chore1": "Have you seen the strange objects in the sky? Keep an eye on your crops!",
   "npcDialogues.pumpkinPete.chore2": "These new animal products are bringing so many new farming possibilities!",
   "npcDialogues.pumpkinPete.chore3": "The Farmers Market is busier than ever with all these new resources!",
