--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4469,5 +4469,6 @@
   "marketplace.welcome.six": "Earn points on trades and unlock rewards.",
   "marketplace.welcome.seven": "The marketplace items are intended for in-game use, not speculation or investment",
   "marketplace.welcome.gotIt": "Got it",
-  "marketplace.welcome.title": "Welcome to the Marketplace"
+  "marketplace.welcome.title": "Welcome to the Marketplace",
+  "marketplace.topFriends": "Top Friends"
 }
