--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3841,7 +3841,7 @@
   "skill.bettysFriend": "Betty Coin delivery revenue increased by 30%",
   "skill.efficientBin": "+5 Sprout Mix when collecting from Compost Bin",
   "skill.turboCharged": "+5 Fruitful Blend when collecting from Turbo Composter",
-  "skill.oldFarmer": "+0.1 Advanded Crop yield",
+  "skill.oldFarmer": "+0.1 Advanced Crop yield",
   "skill.strongRoots": "Radish, Wheat, Kale, Barley grow 10% faster",
   "skill.coinSwindler": "+10% coins when selling crops (Seed Shop)",
   "skill.goldenSunflower": "0.15% chance of getting +0.35 gold when manually harvesting sunflowers",
