--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4477,5 +4477,6 @@
   "marketplace.welcome.gotIt": "Got it",
   "marketplace.welcome.title": "Welcome to the Marketplace",
   "marketplace.topFriends": "Top Friends",
-  "marketplace.notForSale": "Not for sale"
+  "marketplace.notForSale": "Not for sale",
+  "marketplace.quickswap": "Quickswap"
 }
