[FEAT] Compost Skill Tree (#4869)
* [FEAT] Compost Tree

* Feathery Business

* Turbo Charged Wrong Island Category

* Show missing boost info in composter

* FIx More with Less skill

* Composting Revamp

* Composting Overhaul

* Composting Revamp Clearer Comments

* Composting Revamp Missing Fertiliser buff

* Nerf Composting Revamp

* Text fixes

* Some more text fixes

* Feathery Business Tests

* Composting Bonanza missing time boost

* Rework Composting Bonanza

* Rename eggBoost to resourceBoost

* Wrong Composting Bonanza Boost

* fix tests

* advanced typo

* Hide the '2' in Green Thumb 2

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -2026,9 +2026,12 @@
   "greenhouse.oilInMachine": "{{oil}} Oil in machine",
   "greenhouse.insertOil": "Insert Oil: {{oil}} available",
   "greenhouse.numberOil": "{{oil}} Oil",
-  "guide.compost.addEggs.speed": "Add eggs to speed up production",
+  "guide.compost.addEggs.speed": "Add eggs to speed up production.",
+  "guide.compost.addFeathers.speed": "Add feathers to speed up production",
   "guide.compost.addEggs": "Add Eggs",
+  "guide.compost.addFeathers": "Add Feathers",
   "guide.compost.eggs": "Eggs",
+  "guide.compost.feathers": "Feathers",
   "guide.compost.cropGrowthTime": "-50% Crop Growth Time",
   "guide.compost.fishingBait": "Fishing bait",
   "guide.compost.placeCrops": "Place crops in the composter to feed the worms",
@@ -2036,6 +2039,7 @@
   "guide.compost.yieldsWorms": "Each compost yields worms that can be used as bait for fishing",
   "guide.compost.useEggs": "Tired of waiting? Use Eggs to speed up the compost production",
   "guide.compost.addEggs.confirmation": "Are you sure you want to add {{noEggs}} Eggs to reduce compost production time by {{time}}?",
+  "guide.compost.addFeathers.confirmation": "Are you sure you want to add {{noFeathers}} Feathers to reduce compost production time by {{time}}?",
   "guide.factionPet.one": "Each week the pet will request 3 foods. When fed, the XP from the food will go to the total XP tally for the faction.",
   "guide.factionPet.two": "Your faction will have a goal xp they need to reach each week. If the faction reaches the goal, the next week goal will be 25% more than the previous week's goal! If the goal isn't reached, it will be reset back to 1000 x faction members.",
   "guide.factionPet.three": "If the faction doesn't reach the goal then the pet will go to sleep for 1 week.",
@@ -3837,7 +3841,7 @@
   "skill.bettysFriend": "Betty Coin delivery revenue increased by 30%",
   "skill.efficientBin": "+5 Sprout Mix when collecting from Compost Bin",
   "skill.turboCharged": "+5 Fruitful Blend when collecting from Turbo Composter",
-  "skill.oldFarmer": "+0.1 Advanded Crop yield",
+  "skill.oldFarmer": "+0.1 Advanced Crop yield",
   "skill.strongRoots": "Radish, Wheat, Kale, Barley grow 10% faster",
   "skill.coinSwindler": "+10% coins when selling crops (Seed Shop)",
   "skill.goldenSunflower": "0.15% chance of getting +0.35 gold when manually harvesting sunflowers",
