[FIX] Santa Dialogue + Time Remaining

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4446,9 +4446,9 @@
   "npcDialogues.corale.chore2": "Something big is disturbing the ocean's natural balance...",
   "npcDialogues.corale.chore3": "The fish say they've seen cow-like shadows in deeper waters!",
 
-  "npcDialogues.santa.intro1": "Ho Ho Ho Bumpkin! For a limited time, I am giving daily rewards for those that find my missing Candy.",
+  "npcDialogues.santa.intro1": "Ho Ho Ho Bumpkin! For a limited time, I am giving daily rewards for those that find my scattered candy.",
   "npcDialogues.santa.intro2": "Each day you will find 10 pieces scattered throughout the Pumpkin Plaza.",
-  "npcDialogues.santa.intro3": "Collect these pieces 12 days in a row for a special prize!",
+  "npcDialogues.santa.intro3": "Collect the 10 candy and claim the daily prizes!",
   "npcDialogues.santa.dialogue1": "Ho ho ho! Collect my missing candy for a reward.",
   "npcDialogues.santa.dialogue2": "Congratutlations, you found my candy!",
   "npcDialogues.santa.dialogue3": "Well done! You have completed the 12 Days of Christmas. Don't forget to place the Festive Tree for a special gift.",
