--- a/src/lib/i18n/dictionaries/ru.json
+++ b/src/lib/i18n/dictionaries/ru.json
@@ -4236,9 +4236,9 @@
   "fishing.finishReels": "Закончите барабаны, прежде чем покупать больше",
   "fishing.buyReels": "Купите 5 барабанов с драгоценными камнями {{gemPrice}}",
   "fishing.buyReels.confirmation": "Вы действительно хотите купить 5 барабанов за драгоценные камни {{gemPrice}}?",
-  "fishing.extraReels": "Дополнительные катушки",
-  "fishing.cast": "В ролях",
-  "fishing.buyMoreReels": "Купите больше катушек",
+  "fishing.extraReels": "Дополнительные попытки",
+  "fishing.cast": "В ролях(Заброс)",
+  "fishing.buyMoreReels": "Купите больше попыток",
   "bumpkinItemBuff.sunflower.shield.boost": "Бесплатные семена подсолнечника",
   "marketplace.itemSold": "Товар продан",
   "marketplace.congratulationsItemSold": "Поздравляем, ваш товар продан!",
@@ -4441,7 +4441,7 @@
   "marketplace.reward.diggingPack.description": "Запас инструментов для землеройных работ",
   "marketplace.reward.fishingPack.description": "Пакет рыболовных утилит",
   "marketplace.reward.animalPack.description": "Пакет кормов для животных",
-  "marketplace.whaleTrades": "Торговцы китами",
+  "marketplace.whaleTrades": "Киты рынка",
   "marketplace.topFriends": "Лучшие друзья",
   "marketplace.notForSale": "Не продается",
   "description.christmasStocking": "Классический праздничный чулок, идеально подходящий для праздничных угощений и сюрпризов.",
