Refactor COLLECTIBLE_BUFF_LABELS

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -217,6 +217,7 @@
   "description.laurie.chuckle.crow.boost": "+0.2 Advanced Crops",
   "description.bale.boost": "+0.1 Egg",
   "description.immortal.pear.boost": "+1 Fruit Harvest per seed",
+  "description.immortal.pear.boosted.boost": "+2 Fruit Harvest per seed",
   "description.treasure.map.boost": "+20% Coins Treasure Bounty Sale Price",
   "description.poppy.boost": "+0.1 Corn",
   "description.kernaldo.boost": "-25% Corn Growth Time",
@@ -3691,6 +3692,7 @@
   "description.iron.beetle": "Beetle made of iron.",
   "description.stone.beetle": "Beetle made of stone.",
   "description.macaw.boost": "+0.1 Fruit Patch Yield",
+  "description.macaw.boosted.boost": "+0.2 Fruit Patch Yield",
   "description.camel.onesie.boost": "+0.1 Fruit Patch Yield",
   "description.butterfly.boost": "20% chance of +1 flower",
   "description.squirrel.boost": "+0.1 Wood",
