--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -302,7 +302,6 @@
   "description.grinxs.hammer.boost": "Halves expansion costs",
   "description.time.warp.totem.boost": "50% Reduction to Crop, Mineral, Fruit, Cooking and Tree Time",
   "description.radiant.ray.boost": "+0.1 Iron",
-  "description.babyPanda.boost": "Beginner 2x XP Boost",
   "description.hungryHare.boost": "Fermented Carrots 2x XP",
   "description.turbo.sprout.boost": "-50% Growth Time in Greenhouse",
   "description.soybliss.boost": "+1 Soybean",
@@ -1639,7 +1638,7 @@
   "description.rare.key": "Visit the beach to unlock your reward",
   "description.luxury.key": "Visit the plaza near woodlands to unlock your reward",
   "description.prizeTicket": "A prized ticket. You can use it to enter the monthly goblin raffle.",
-  "description.babyPanda": "A cute panda from the Gas Hero event. Double experience for beginners during March.",
+  "description.babyPanda": "A cute panda from the Gas Hero event. Double experience for beginners during March 2024.",
   "description.baozi": "A delicious treat from the Lunar New Year event.",
   "description.communityEgg": "Wow, you must really care about the community!",
   "description.hungryHare": "This ravenous rabbit hops through your farm. A special event item from Easter 2024",
@@ -3799,9 +3798,8 @@
   "faction.shop.membersOnly": "Faction member exclusive",
   "description.marty": "An FSL champion Morchi.",
   "description.morty": "A Morchi discovered in Sunflower Land!",
-  "description.miffy": "A rare Morchi. Doubles XP during the FSL Competition.",
+  "description.miffy": "A rare Morchi. Doubles XP during the FSL Competition(October 2024).",
   "description.mog": "A lazy Morchi.",
-  "miffy.boost": "2x XP",
   "animal": "Animal",
   "obsession": "Obsession",
   "feederMachine.title": "Feeder Machine",
