[FIX] Festive Tree Small Lore

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -2185,6 +2185,9 @@
   "interactableModals.castle.message": "Hold it there peasant! There is no way I'm letting you visit the castle",
   "interactableModals.woodlands.message": "Are you travelling to the woodlands? Make sure you pick up some delicious mushrooms!",
   "interactableModals.port.message": "Hold it there! The Goblin's are still building the port. It will be ready for travel and fishing soon.",
+
+  "interactableModals.festiveTree.message1": "It's said that gifts left beneath its branches bring fortune, and on the longest night of the festive period, someone hides a special gift for the worthy to receive.",
+  "interactableModals.festiveTree.message2": "To this day, the Festive Tree remains a beacon of hope, fortune, and the joy of giving in Sunflower Land.",
   "introPage.welcome": "Welcome to the Potion Room, my curious apprentice!",
   "introPage.description": "I am Mad Scientist Bumpkin, here to assist you on this magical quest into the world of botanic sorcery. Get ready to uncover the secrets of Sunflower Land! Each attempt will cost 320 coins.",
   "introPage.mission": "Your mission: decipher the right combination of potions within the enchanted grid.",
