--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4453,7 +4453,7 @@
   "npcDialogues.santa.intro2": "Each day you will find 10 pieces scattered throughout the Pumpkin Plaza.",
   "npcDialogues.santa.intro3": "Collect the 10 candy and claim the daily prizes!",
   "npcDialogues.santa.dialogue1": "Ho ho ho! Collect my missing candy for a reward.",
-  "npcDialogues.santa.dialogue2": "Congratutlations, you found my candy!",
+  "npcDialogues.santa.dialogue2": "Congratulations, you found my candy!",
   "npcDialogues.santa.dialogue3": "Well done! You have completed the 12 Days of Christmas. Don't forget to place the Festive Tree for a special gift.",
   "npcDialogues.santa.dialogue4": "Complete the challenge 12 days in a row for a special prize.",
   "npcDialogues.santa.dialogue5": "Ho Ho Ho! Well done Bumpkin, you found my candy.",
