[FIX Elf Dialogue

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4461,7 +4461,7 @@
   "npcDialogues.ginger.dialogue1": "This Festive Tree is full of gifts and decorations.",
   "npcDialogues.ginger.dialogue2": "I wonder what I can receive from Santa after shaking it...",
 
-  "npcDialogues.elf.dialogue1": "Oops, I dropped some candy canes around the plaza. If you find any, bring them back to Santa for a sweet reward!",
+  "npcDialogues.elf.dialogue1": "Oops, I dropped some candies around the plaza. If you find any, bring them back to Santa for a sweet reward!",
 
   "candy.remaining": "{{candies}} remaining",
   "christmas.days": "Day {{day}}",
