[WIP] Bud buffs

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4522,5 +4522,35 @@
   "marketplace.quickswap.continue": "Continue",
   "marketplace.about": "About",
   "marketplace.wantToUnlock": "Want to unlock unlimited trades?",
-  "marketplace.tradeInitiated": "Great news! It looks like someone is fulfilling your trade. Please wait for the trade to complete."
+  "marketplace.tradeInitiated": "Great news! It looks like someone is fulfilling your trade. Please wait for the trade to complete.",
+  "budBuff.stem.3leafClover.boost": "+0.5 Crop",
+  "budBuff.stem.fishHat.boost": "10% Critical Chance +1",
+  "budBuff.stem.diamondGem.boost": "+0.2 Mineral",
+  "budBuff.stem.goldGem.boost": "+0.2 Gold",
+  "budBuff.stem.minerHat.boost": "+0.2 Iron",
+  "budBuff.stem.carrotHead.boost": "+0.3 Carrot",
+  "budBuff.stem.sunflowerHat.boost": "+0.5 Sunflower",
+  "budBuff.stem.rubyGem.boost": "+0.2 Stone",
+  "budBuff.stem.mushroom.boost": "+0.3 Mushroom",
+  "budBuff.stem.magicMushroom.boost": "+0.2 Magic Mushroom",
+  "budBuff.stem.acornHat.boost": "+0.1 Wood",
+  "budBuff.stem.banana.boost": "+0.2 Fruit",
+  "budBuff.stem.treeHat.boost": "+0.1 Wood",
+  "budBuff.stem.eggHead.boost": "+0.2 Egg",
+  "budBuff.stem.appleHead.boost": "+0.2 Fruit",
+  "budBuff.aura.basic.boost": "+5% Boost Increase",
+  "budBuff.aura.green.boost": "+20% Boost Increase",
+  "budBuff.aura.rare.boost": "+100% Boost Increase",
+  "budBuff.aura.mythical.boost": "+400% Boost Increase",
+  "budBuff.type.plaza.boost": "+0.3 Basic Crops",
+  "budBuff.type.woodlands.boost": "+0.2 Wood",
+  "budBuff.type.cave.boost": "+0.2 Minerals",
+  "budBuff.type.sea.boost": "+10% Critical Chance +1",
+  "budBuff.type.castle.boost": "+0.3 Medium Crops",
+  "budBuff.type.port.boost": "+10% Fish XP",
+  "budBuff.type.retreat.boost": "+0.2 Animal Produce",
+  "budBuff.type.saphiro.boost": "+10% Crop Speed",
+  "budBuff.type.snow.boost": "+0.3 Advanced Crops",
+  "budBuff.type.beach.boost": "+0.2 Fruit",
+  "description.bud.generic": "A friendly farming pet that will turbo charge your Sunflower Land farm and gaming experience"
 }
