[FEAT] Prompt to sync marketplace

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -2380,6 +2380,11 @@
   "marketplace.noMyOffers": "You have not made any offers",
   "marketplace.sflEscrowed": "{{sfl}} SFL Locked",
   "marketplace.itemInUse": "Item in use",
+  "marketplace.itemNotStoredOnChain": "{{name}} not stored on chain",
+  "marketplace.itemNotStoredOnChain.listing.warning": "This item will need to be stored on chain before it can be listed for sale.",
+  "marketplace.itemNotStoredOnChain.offer.warning": "Your SFL will need to be stored on chain before it can complete this offer.",
+  "marketplace.itemNotStoredOnChain.purchase.warning": "Your SFL will need to be stored on chain before you can complete this purchase.",
+  "marketplace.itemNotStoredOnChain.acceptOffer.warning": "Your item will need to be stored on chain before it can be accepted.",
   "marketplace.itemSecured": "Item secured",
   "marketplace.resourcesSecured": "Resources secured",
   "marketplace.resourcesSecuredWarning": "You will not be able to use your resources while they're listed.",
