--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4552,5 +4552,25 @@
   "budBuff.type.saphiro.boost": "+10% Crop Speed",
   "budBuff.type.snow.boost": "+0.3 Advanced Crops",
   "budBuff.type.beach.boost": "+0.2 Fruit",
-  "description.bud.generic": "A friendly farming pet that will turbo charge your Sunflower Land farm and gaming experience"
+  "description.bud.generic": "A friendly farming pet that will turbo charge your Sunflower Land farm and gaming experience",
+  "skillTier.pointsToUnlock.singular": "Use {{points}} Skill Point to unlock this tier",
+  "skillTier.pointsToUnlock.plural": "Use {{points}} Skill Points to unlock this tier",
+  "skillTier.notEnoughPoints": "Not enough skill points",
+  "skillTier.skillDisabled": "Skill is disabled",
+  "skill.claimed": "Claimed",
+  "skill.claim": "Claim",
+  "skill.confirmationMessage": "Are you sure you want to claim {{skillName}}?",
+  "skill.costMessage": "This will cost {{points}} skill points.",
+  "skill.claimSkill": "Claim Skill",
+  "skillPath.skills": "{{skillPath}} Skills",
+  "skillTier.skillPoints.singular": "{{points}} Skill Point",
+  "skillTier.skillPoints.plural": "{{points}} Skill Points",
+  "powerSkills.title": "Power Skills",
+  "powerSkills.ready": "Power Skill Ready",
+  "powerSkills.nextUse": "Next skill use in:",
+  "powerSkills.use": "Use",
+  "powerSkills.unlockedSkills": "Unlocked Skills",
+  "powerSkills.confirmationMessage": "Are you sure you want to use {{skillName}}?",
+  "powerSkills.cooldownMessage": "You won't be able to use this skill again for {{cooldown}}",
+  "powerSkills.useSkill": "Use Skill"
 }
