--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4553,8 +4553,7 @@
   "budBuff.type.snow.boost": "+0.3 Advanced Crops",
   "budBuff.type.beach.boost": "+0.2 Fruit",
   "description.bud.generic": "A friendly farming pet that will turbo charge your Sunflower Land farm and gaming experience",
-  "skillTier.pointsToUnlock.singular": "Use {{points}} Skill Point to unlock this tier",
-  "skillTier.pointsToUnlock.plural": "Use {{points}} Skill Points to unlock this tier",
+  "skillTier.pointsToUnlock": "Points to unlock: {{points}}",
   "skillTier.notEnoughPoints": "Not enough skill points",
   "skillTier.skillDisabled": "Skill is disabled",
   "skill.claimed": "Claimed",
@@ -4565,6 +4564,7 @@
   "skillPath.skills": "{{skillPath}} Skills",
   "skillTier.skillPoints.singular": "{{points}} Skill Point",
   "skillTier.skillPoints.plural": "{{points}} Skill Points",
+  "skillTier.number": "Tier {{number}}",
   "powerSkills.title": "Power Skills",
   "powerSkills.ready": "Power Skill Ready",
   "powerSkills.nextUse": "Next skill use in:",
